<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="156dp"
        android:layout_height="155dp"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/desc_logo_seguridad"  app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" /> </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contrasena"
            android:inputType="textPassword"
            android:minHeight="48dp" /> </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnRegistrarCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrar_cuenta"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRecuperarClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_recuperar_clave"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVerificarBluetooth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_verificar_bluetooth"
        android:backgroundTint="#00BCD4"
        app:layout_constraintTop_toBottomOf="@id/btnRecuperarClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>