<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp" tools:context=".RecuperarClave">

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="156dp"
      android:layout_height="155dp"
      android:layout_marginTop="60dp"
      android:contentDescription="@string/desc_logo_seguridad"
      android:src="@mipmap/ic_launcher_foreground"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextText3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:ems="10"
      android:hint="@string/hint_email_usuario"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/imageView4" />

  <Button
      android:id="@+id/btnVolver"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/btn_volver_login"

      android:textColor="#9C27B0"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"

      app:layout_constraintTop_toBottomOf="@+id/btnRecuperarClave"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/btnRecuperarClave"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:backgroundTint="#9C27B0"
      android:paddingVertical="12dp"
      android:text="@string/btn_recuperar_clave"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/editTextText3" />

</androidx.constraintlayout.widget.ConstraintLayout>